--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -100,7 +100,7 @@ a{
   width: 100%;
   height: 100%;
   background-color: $main-color;
-  border: solid $border-color 1px; ;
+  border: $border-color solid 1px; ;
   border-radius: 8px;
   display: grid;
   grid-template-columns: 1fr;
