--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: $Fira-code;
 }
 html{
   height: 100vh;
@@ -12,15 +13,12 @@ html{
 }
 //body
 body{
-  font-family: $Fira-code;
-  color: $font-color;
   background-color: $window-color;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 5vh;
 }
-
 body::-webkit-scrollbar {
   display: none;
 }
@@ -100,6 +98,7 @@ a{
   width: 100%;
   height: 100%;
   background-color: $main-color;
+  color: $font-color;
   border: $border-color solid 1px;
   border-radius: 8px;
   display: grid;
@@ -613,8 +612,65 @@ footer{
   .snippet{
     @include position(relative, 0, 0, 0, 0);
     @include width-height(50%, 100%);
-    @include flex(0, 0, 0);
-    overflow: hidden;
+    @include flex(column, space-between, flex-start);
+    .code{
+      position: absolute;
+      @include flex(column, flex-start, center);
+      @include width-height(calc(100% - 30px), 100%);
+      overflow-x: hidden;
+      overflow-y: auto;
+      padding: 25px 50px;
+      &::-webkit-scrollbar {
+        display: none;
+        width: 10px;
+        border-left: 1px solid $border-color;
+      }
+      &::-webkit-scrollbar-thumb {
+          background-color: $font-color;
+      }
+      .carte-code{
+        width: 100%;
+        margin: 25px 0;
+        p{
+          font-size: 14px;
+          display: flex;
+          align-items: center;
+        }
+        img{
+          width: 30px;
+          height: 30px;
+          object-fit: cover;
+          border-radius: 8px;
+          margin-right: 10px;
+        }
+        .code_user{
+          width: 50%;
+          display: flex;
+          align-items: center;
+        }
+        .code_note{
+          width: 50%;
+          display: flex;
+          justify-content: flex-end;
+          img{
+            width: 20px;
+            height: 20px;
+            margin: 0 5px 0 10px;
+          }
+          p:nth-child(2){
+            margin-right: 7px;
+          }
+        }
+        .function{
+          width: 100%;
+          padding: 20px 60px 20px 20px;
+          background-color: $window-color;
+          border: solid $border-color 1px;
+          border-radius: 8px;
+          z-index: 1;
+        }
+      }
+    }
   }
 }
 
@@ -643,7 +699,7 @@ footer{
       background-color: $window-color;
       color: $font-color;
       border: solid $border-color 1px;
-      font-size: 1rem;
+      font-size: 0.8rem;
       &:focus{
         border: solid $font-color 1px !important;
       }
@@ -661,7 +717,7 @@ footer{
       background-color: $window-color;
       color: $font-color;
       border: solid $border-color 1px;
-      font-size: 1rem;
+      font-size: 0.8rem;
       &:focus{
         border: solid $font-color 1px !important;
       }
