--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -365,7 +365,7 @@ body::-webkit-scrollbar {
 
 p {
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.2;
 }
 
 small {
@@ -847,7 +847,6 @@ footer .logo {
 
 .project {
   width: 375px;
-  height: 300px;
   margin: 25px;
 }
 .project .card {
@@ -855,7 +854,6 @@ footer .logo {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   border-radius: 15px;
   border: solid #1E2D3D 1px;
 }
@@ -933,13 +931,13 @@ footer .logo {
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  height: 150px;
   flex-grow: 1;
   border-radius: 0 0 15px 15px;
   padding: 10px;
   background-color: #011627;
 }
 .project .card .description-card .button {
+  margin-top: 10px;
   padding: 10px;
   border-radius: 8px;
   background: #1E2D3D;
