--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -662,6 +662,7 @@ footer{
           font-size: 14px;
           display: flex;
           align-items: center;
+          word-wrap: break-word;
         }
         img{
           width: 30px;
