--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -7,6 +7,7 @@ $fourth-color: #43D9AD;
 $fifth-color: #E99287;
 $border-color: #1E2D3D;
 $white: #E5E9F0;
+$error-color: #E53E3E;
 $transparent: rgba(0, 0, 0, 0);
 
 $javascript-color: #F7DF1E;
