réarangement icon + mise en place d'un filtre sur Projects.vue

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -15,8 +15,7 @@ $react-color: #61DAFB;
 $vuejs-color: #4FC08D;
 $css-color: #1572B6;
 $scss-color: #CC6699;
-$symfony-color: #7f7f7f;
-$nextjs-color: #ffffff;
+$symfony-color: #ffffff;
 $threejs-color: #000000;
 $wordpress-color: #21759B;
 $mysql-color: #4479A1;
