--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -387,6 +387,11 @@ footer{
   grid-template-rows: 50px 150px 50px 1fr;
   width: 100%;
   height: 100%;
+  .logo-projects{
+    margin: 10px;
+    width: 30px;
+    height: auto;
+  }
   .details-projects{
     grid-column: 1/2;
     grid-row: 2/5;
@@ -395,11 +400,6 @@ footer{
     justify-content: flex-start;
     align-items: flex-start;
     padding: 10px;
-    .logo-projects{
-      margin: 10px;
-      width: 30px;
-      height: auto;
-    }
     .position-checkbox{
       width: 20px;
       height: 20px;
@@ -529,27 +529,27 @@ footer{
       height: 150px;
       border-radius: 15px 15px 0 0;
     }
-    .logo-card-javascript{
+    .logo-card-Javascript{
       @include logo-card;
       background-color:  $javascript-color;
     }
-    .logo-card-css{
+    .logo-card-Css{
       @include logo-card;
       background-color: $css-color;
     }
-    .logo-card-react{
+    .logo-card-React{
       @include logo-card;
       background-color: $react-color;
     }
-    .logo-card-vue{
+    .logo-card-Vuejs{
       @include logo-card;
       background-color: $vuejs-color;
     }
-    .logo-card-symfony{
+    .logo-card-Symfony{
       @include logo-card;
       background-color: $symfony-color;
     }
-    .logo-card-threejs{
+    .logo-card-Threejs{
       @include logo-card;
       background-color: $threejs-color;
     }
