--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -528,6 +528,12 @@ footer{
       width: 100%;
       height: 150px;
       border-radius: 15px 15px 0 0;
+      .img-projet{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px 15px 0 0;
+      }
     }
     .logo-card-Javascript{
       @include logo-card;
